# ai-recruitment

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Agents.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  TODO.md  docker-compose.yml
.ai/: DECISIONS.md  HYPOTHESES.md  MEMORY.md  (+8 more)
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: ai.py  applications.py  audit.py  auth.py  candidates.py  dashboard.py  interviews.py  jobs.py  resumes.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  session.py
backend/app/db/migrations/versions/: 5f6650966c99_initial_schema.py
backend/app/llm/: base.py  prompts.py
backend/app/llm/providers/: mock.py
backend/app/models/: ai_analysis.py  application.py  audit_log.py  base.py  candidate.py  department.py  file.py  interview.py  job.py  resume.py  role.py  user.py
backend/app/schemas/: ai.py  application.py  audit.py  candidate.py  common.py  dashboard.py  interview.py  job.py  resume.py
backend/app/scripts/: retention_cleanup.py  seed_data.py
backend/app/services/: ai_service.py  audit_service.py  resume_parser_service.py  retention_service.py  storage_service.py  workflow_service.py
backend/app/tasks/: worker.py
backend/app/tests/: test_ai_workflow.py  test_audit_and_retention.py  test_config_security.py  test_core_crud_api.py  test_dashboard_summary.py  test_deployment_smoke.py  test_instance_verification_chain.py  test_resume_import_flow.py  test_startup_retry.py
backend/app/utils/: pagination.py
(+70 files in other folders)
