[project]
name = "ai-recruitment-backend"
version = "0.1.0"
description = "FastAPI backend for an AI recruitment management system"
requires-python = ">=3.10"
dependencies = [
  "alembic>=1.13.2",
  "bcrypt>=4.1.3",
  "fastapi>=0.111.0,<0.116.0",
  "passlib[bcrypt]>=1.7.4",
  "psycopg[binary]>=3.2.1",
  "pydantic-settings>=2.3.4",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.9",
  "redis>=5.0.7",
  "sqlalchemy>=2.0.31",
  "uvicorn[standard]>=0.30.1"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0,<0.28.0",
  "pytest>=8.2.2",
  "ruff==0.15.17"
]

[tool.ruff]
line-length = 100
target-version = "py310"
